# zincbloom

./: .gitignore  Cargo.toml  test-write-feature.js
backend/: Cargo.toml  test_permissions.sql
backend/.sqlx/: query-0880ee185b58a34dfb2492d9992280be2635ac7fe332bcd068a933d5b6b2d008.json  query-17b6566f77c9ac847d7d284de7020ebabc1d5f3c417b7c0f579534551f8d866c.json  query-294517277a98060a70dd9e4aa93c9a5620b217fde5f460952b271fff21cb3ddb.json  query-3143d5d894003cee72002e3dbbd72a60205ee4d3a55329d56f3da1e6cb85ebe6.json  query-77edc8864c4c5b9ed69ec8bcf9591167e0ddcd79e70a08e8284b293ad97d200c.json  query-a611965e89f475b2e90e493532d6b19e1e24faf18afa240af3caadc4649903b4.json  query-cfc4e6ce94a048d29cb906d8c4208fe8e02fa568b4f07fb7a00a8fa1928cd2f9.json  query-e890b5d80d71c93cd8ba6483c8967208169915bc1ea6b147f3a79d6448920443.json
backend/config/: default.toml
backend/migrations/: 20250512115553_create_categories_table.sql  20250515112318_create_tags_table.sql  20250520163847_create_post_categories_table.sql  20250520163923_create_post_tags_table.sql  20250604103102_create_users_table.sql  20250604104057_add_author_id_to_posts.sql  20250604104437_create_roles_table.sql  20250604104633_create_permissions_table.sql  20250604110302_create_user_roles_table.sql  20250604111315_create_role_permissions_table.sql  20250610180733_create_refresh_tokens_table.sql  20250611164844_create_login_attempts_table.sql  20250612234320_create_one_time_tokens_table.sql  20250613000224_add_verified_at_to_users.sql  20250625210442_fix_post_permissions.sql  20250626182839_refactor_permission_system_v2.sql  20250627025832_improve_draft_permissions_privacy.sql  20250627040904_fix_user_role_draft_permissions.sql  20250710015848_fix_missing_create_permissions.sql  (+3 more)
(+158 files in other folders)
