[workspace]
resolver = "2" # 推荐为新的工作空间设置 resolver 版本为 "2"

# 列出工作空间中的成员包 (相对于这个 Cargo.toml 文件的路径)
members = [
    "backend", # 指向你的后端项目目录
    # "frontend-admin-panel", # 示例：如果未来有一个用 Rust 写的管理后台
    # "shared-utils",         # 示例：如果未来有一个共享的 Rust 工具库
]

# 可以在这里定义整个工作空间共享的 profile 设置
# 例如，为 release 构建进行优化
[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"