[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8",features = ["json","macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "uuid",
    "chrono",
    "macros",
] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
config = "0.15"
#thiserror = "2"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
slug = "0.1"
argon2 = "0.5.3"
jsonwebtoken = "9.3.1"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
blake3 = "1.8.2"
rand = { version = "0.9.1",features = ["thread_rng"] }
lettre = { version = "0.11.17", features = ["tokio1-native-tls"] }
[dev-dependencies]
anyhow = "1.0"
serde_json = "1"
# 需要 "util" feature 来启用 ServiceExt trait 和 oneshot 方法
tower = { version = "0.5", features = ["util"] }
#hyper = { version = "1.6", features = ["full"] } # oneshot 通常也需要 hyper 类型
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
